--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
             </div>
 		
             </div>
-		<div class="row">
-		    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
+		   <div class="column">
            	<h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
 		 <div class="resume-item">
               <h4>Παρακολουθηση επιστημονικης εκδηλωσης του Οργανισμου Πνευματικης Ιδιοκτησιας</h4>
