--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
               </ul>
             </div>
           </div>
+		<div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
             <h3 class="resume-title">Εκπαίδευση</h3>
             <div class="resume-item">
