--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
             </div>
 		
             </div>
-		            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
 			    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
+		     <hr style="border-top: 3px dotted #998143">
               <h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
 		 <div class="resume-item">
               <h4>Παρακολουθηση επιστημονικης εκδηλωσης του Οργανισμου Πνευματικης Ιδιοκτησιας</h4>
