--- a/index.html
+++ b/index.html
@@ -178,8 +178,7 @@
             </div>
 		
             </div>
-			    <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
-		     <hr style="border-top: 3px dotted #998143">
+			   <tr><td> <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
               <h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
 		 <div class="resume-item">
               <h4>Παρακολουθηση επιστημονικης εκδηλωσης του Οργανισμου Πνευματικης Ιδιοκτησιας</h4>
@@ -213,7 +212,7 @@
 					 Νομικής του Πανεπιστημίου Αθηνών σε συνεργασία με το Κέντρο Ψυχαναλυτικών Ερευνών της Αθήνας</em></p>
             </div>
 			<div class="resume-item">
-              <h4>Επισκεψη στο Ευρωπαϊκο Κοινοβουλιο</h4>
+              <h4>Επισκεψη στο Ευρωπαϊκο Κοινοβουλιο</h4><tr>
               <h5>Στρασβούργο, Απρίλιος 2012</h5>
               <p><em>EUROSCOLA</em></p>
             </div>
