--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
             </div>
 		
             </div>
-			   <tr><td> <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
+			   <div class="row-lg-6" data-aos="fade-up" data-aos-delay="60">
+		       
               <h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
 		 <div class="resume-item">
               <h4>Παρακολουθηση επιστημονικης εκδηλωσης του Οργανισμου Πνευματικης Ιδιοκτησιας</h4>
@@ -212,7 +213,7 @@
 					 Νομικής του Πανεπιστημίου Αθηνών σε συνεργασία με το Κέντρο Ψυχαναλυτικών Ερευνών της Αθήνας</em></p>
             </div>
 			<div class="resume-item">
-              <h4>Επισκεψη στο Ευρωπαϊκο Κοινοβουλιο</h4><tr>
+              <h4>Επισκεψη στο Ευρωπαϊκο Κοινοβουλιο</h4>
               <h5>Στρασβούργο, Απρίλιος 2012</h5>
               <p><em>EUROSCOLA</em></p>
             </div>
