--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <!--html lang="en"-->
 
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport"> 
+<meta charset="utf-8">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
 
 <html>
+
 <body>
-	
+
   <title>Σοφιάννα Μπαλή - Βιογραφικό</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
@@ -17,7 +18,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,215 +33,215 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-</head>
+  </head>
 
-<body>
+  <body>
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
         <div class="section-title">
-		  <!--img src="assets/img/sofianna-img.jpg" alt="" class="img-fluid rounded-circle" style="float:center;width:200px"-->
-		  <h2> Μπαλή Σοφιάννα - Βιογραφικό Σημείωμα</h2>
-		  <p>
-			  <!--li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li-->
-			   <strong>Τηλέφωνο:</strong> <a href="tel:+306974759815">+30 6974759815</a> |
-			   <strong>Email:</strong> <a href="mailto:sofianna.bali@hotmail.com">sofianna.bali@hotmail.com</a> |
-			   <strong>Πόλη:</strong> Αθήνα
-		  </p>
+          <!-- img src="assets/img/sofianna-img.jpg" alt="" class="img-fluid rounded-circle" style="float:center;width:200px" -->
+          <h2> Μπαλή Σοφιάννα - Βιογραφικό Σημείωμα</h2>
+          <p>
+            <!--li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li-->
+            <strong>Τηλέφωνο:</strong> <a href="tel:+306974759815">+30 6974759815</a> |
+            <strong>Email:</strong> <a href="mailto:sofianna.bali@hotmail.com">sofianna.bali@hotmail.com</a> |
+            <strong>Πόλη:</strong> Αθήνα
+          </p>
         </div>
-        <div class="row-lg-6" data-aos="fade-up" data-aos-delay="60">
+        <div class="row" data-aos="fade-up" data-aos-delay="40">
           <h3 class="resume-title">Περίληψη</h3>
           <div class="resume-item pb-0">
             <p>
-                Νέα δικηγόρος, παρά Πρωτοδίκαις, με συμβουλευτική και μικρή δικαστηριακή εμπειρία σε όλο το φάσμα του δικαίου.
-		Ιδιαίτερο ενδιαφέρον για το δίκαιο της διανοητικής ιδιοκτησίας. 
-		Επιθυμία για ουσιαστική ενασχόληση με λοιπούς κλάδους του δικαίου· ενδεικτικά, αστικό, νέες τεχνολογίες, GDPR, εμπορικό, εργατικό, αλλοδαπών.
+              Νέα δικηγόρος, παρά Πρωτοδίκαις, με συμβουλευτική και μικρή δικαστηριακή εμπειρία σε όλο το φάσμα του
+              δικαίου.
+              Ιδιαίτερο ενδιαφέρον για το δίκαιο της διανοητικής ιδιοκτησίας.
+              Επιθυμία για ουσιαστική ενασχόληση με λοιπούς κλάδους του δικαίου· ενδεικτικά, αστικό, νέες τεχνολογίες,
+              GDPR, εμπορικό, εργατικό, αλλοδαπών.
             <p>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="40">
+        <div class="row" data-aos="fade-up" data-aos-delay="40">
+          <div class="col" data-aos="fade-up" data-aos-delay="40">
             <h3 class="resume-title">Εργασιακή Εμπειρία</h3>
-		 <div class="resume-item">
-		 <h4>Νeα δικηγoρος</h4>
-	         <h5> Δεκέμβριος 2021 - σήμερα</h5>
-		   <p><em> Ανάληψη και αυτόνομη διαχείριση νομικών εργασιών.
-		   Ενδεικτικά: συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα σε υποθηκοφυλακεία,
-		  διαπραγμάτευση σύναψης σύμβασης εκμετάλλευσης έργου πνευματικής ιδιοκτησίας, μετάφραση-επικύρωση εγγράφων. </em></p>
+            <div class="resume-item pb-0">
+              <h4>Νeα δικηγoρος</h4>
+              <h5> Δεκέμβριος 2021 - σήμερα</h5>
+              <p><em> Ανάληψη και αυτόνομη διαχείριση νομικών εργασιών.
+                  Ενδεικτικά: συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα σε υποθηκοφυλακεία,
+                  διαπραγμάτευση σύναψης σύμβασης εκμετάλλευσης έργου πνευματικής ιδιοκτησίας, μετάφραση-επικύρωση
+                  εγγράφων. </em></p>
             </div>
-		  <div class="resume-item">
-	        <h4>Νεα δικηγορος</h4>
+            <div class="resume-item pb-0">
+              <!-- <h4>Νεα δικηγορος</h4> -->
               <h5>Ιούλιος 2022 - Δεκέμβριος 2022 </h5>
               <p><em>Νομική συνεργάτιδα της εταιρείας "MTC –ΜΑΚΕΔΟΝΙΚΗ ΤΕΧΝΙΚΗ ΕΤΑΙΡΕΙΑ".
-                Παροχή ανεξάρτητων υπηρεσιών στα πλαίσια ανάληψης έργου από την εταιρεία "PQH ΕΝΙΑΙΑ ΕΙΔΙΚΗ ΕΚΚΑΘΑΡΙΣΗ Α.Ε." 
-		Eκκαθάριση πιστωτικών ιδρυμάτων.  </em></p>
-	      </div>
-		   <div class="resume-item">
-			        <h4>Νεα δικηγορος</h4>
-              <h5>Σεπτέμβριος - Οκτώβριος 2021	</h5>
-			   <p><em>Δικηγορικό Γραφείο Στέλιου Γκαρίπη </em></p>
+                  Παροχή ανεξάρτητων υπηρεσιών στα πλαίσια ανάληψης έργου από την εταιρεία "PQH ΕΝΙΑΙΑ ΕΙΔΙΚΗ ΕΚΚΑΘΑΡΙΣΗ
+                  Α.Ε."
+                  Eκκαθάριση πιστωτικών ιδρυμάτων. </em></p>
+            </div>
+            <div class="resume-item pb-0">
+              <!-- <h4>Νεα δικηγορος</h4> -->
+              <h5>Σεπτέμβριος - Οκτώβριος 2021 </h5>
+              <p><em>Δικηγορικό Γραφείο Στέλιου Γκαρίπη </em></p>
               <p><em>Συνεργασία σε υποθέσεις δημοσίου, εταιρικού δικαίου,
-                βιομηχανικής ιδιοκτησίας. Ενασχόληση με τη βασική νομοθεσία για τα ιατροτεχνολογικά προϊόντα.   </em></p>
+                  βιομηχανικής ιδιοκτησίας. Ενασχόληση με τη βασική νομοθεσία για τα ιατροτεχνολογικά προϊόντα. </em>
+              </p>
             </div>
-		   <div class="resume-item">
-			        <h4>Αδεια ασκησης δικηγορικου επαγγελματος</h4>
-	         <h5> Σεπτέμβριος 2021 </h5>
+            <div class="resume-item pb-0">
+              <h4>Αδεια ασκησης δικηγορικου επαγγελματος</h4>
+              <h5> Σεπτέμβριος 2021 </h5>
             </div>
-		  
-            <div class="resume-item">
+            <div class="resume-item pb-0">
               <h4>ΑΣΚΟΥΜΕΝΗ ΔΙΚΗΓΟΡΟΣ</h4>
               <h5>Μάρτιος 2020 – Σεπτέμβριος 2020</h5>
               <p><em>Περιφέρεια Αττικής - Αυτοτελές Τμήμα Νομικής Υποστήριξης - Γραφείο Νομοθετικού Συντονισμού και
-					Δικαστικών Υποθέσεων Περιφερειακών Ενοτήτων Πειραιώς και
-					Νήσων_Παρέχεται συστατική επιστολή κατόπιν σχετικού αιτήματος </em></p>
+                  Δικαστικών Υποθέσεων Περιφερειακών Ενοτήτων Πειραιώς και
+                  Νήσων_Παρέχεται συστατική επιστολή κατόπιν σχετικού αιτήματος </em></p>
               <ul>
                 <li>Ενασχόληση με όλο το φάσμα του δικαίου</li>
-				<li>Θέματα διοικητικού δικαίου, δικονομικά ζητήματα (πολεοδομικά, δημόσιες συμβάσεις, τεχνικά έργα)</li>
-				<li>Θέματα εμπορικού και εταιρικού δικαίου (λύση εμπορικών εταιριών) </li>
-				<li>Θέματα εργατικού δικαίου και ευρύτερα θέματα αστικού δικαίου</li>
-				<li>Αναζήτηση κατάλληλης νομολογίας </li>
-				<li>Σύνταξη νομικών κειμένων</li>
+                <li>Θέματα διοικητικού δικαίου, δικονομικά ζητήματα (πολεοδομικά, δημόσιες συμβάσεις, τεχνικά έργα)</li>
+                <li>Θέματα εμπορικού και εταιρικού δικαίου (λύση εμπορικών εταιριών) </li>
+                <li>Θέματα εργατικού δικαίου και ευρύτερα θέματα αστικού δικαίου</li>
+                <li>Αναζήτηση κατάλληλης νομολογίας </li>
+                <li>Σύνταξη νομικών κειμένων</li>
               </ul>
-			  <h5>Απρίλιος 2019 - Δεκέμβριος 2019</h5>
-			  <p><em>Δικηγορικό Γραφείο Αθανασίου Τετώρου και συνεργατών </em></p>
-			  <ul>
-			    <li>Ενασχόληση με όλο το φάσμα του δικαίου </li>
-				<li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου</li>
-                <li>Εξωτερικές εργασίες (κατάθεση-παραλαβή δικογράφων, παρακολούθηση πορείας των υποθέσεων, παρακολούθηση διαδικασίας στα ακροατήρια)</li>
-				<li>Νομική έρευνα - εύρεση νομολογίας </li>
-				<li>Συνδρομή στη σύνταξη δικογράφων </li>
+              <h5>Απρίλιος 2019 - Δεκέμβριος 2019</h5>
+              <p><em>Δικηγορικό Γραφείο Αθανασίου Τετώρου και συνεργατών </em></p>
+              <ul>
+                <li>Ενασχόληση με όλο το φάσμα του δικαίου </li>
+                <li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου</li>
+                <li>Εξωτερικές εργασίες (κατάθεση-παραλαβή δικογράφων, παρακολούθηση πορείας των υποθέσεων,
+                  παρακολούθηση διαδικασίας στα ακροατήρια)</li>
+                <li>Νομική έρευνα - εύρεση νομολογίας </li>
+                <li>Συνδρομή στη σύνταξη δικογράφων </li>
               </ul>
             </div>
           </div>
-		
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="40">
+          <div class="col" data-aos="fade-up" data-aos-delay="40">
             <h3 class="resume-title">Εκπαίδευση</h3>
             <div class="resume-item">
               <h4>ΝΟΜΙΚΗ ΣΧΟΛΗ</h4>
               <h5>2013 – 2018</h5>
-		    <p><em>Εθνικό και Καποδιστριακό Πανεπιστήμιο Αθηνών</em></p>
+              <p><em>Εθνικό και Καποδιστριακό Πανεπιστήμιο Αθηνών</em></p>
             </div>
-			<h3 class="resume-title">Δεξιότητες</h3>
+            <h3 class="resume-title">Δεξιότητες</h3>
             <div class="resume-item">
-				<h4>ΓΛΩΣΣΕΣ</h4>
-				  <ul> </ul>
-					<ul>
-					<li>Γαλλικά</li>
-					</ul>
-				  <p><em>DALF C2 </em></p>
-				  <ul> </ul>
-				   <ul>
-					<li>Αγγλικά</li>
-				  </ul>
-				  <p><em>Michigan Examination for the Certicate of Proficiency in
-				  English (ECPE)</em></p>
-			</div>
-			<div class="resume-item">
-				<h4>ΧΡΗΣΗ Η/Υ</h4>
-				  <ul> </ul>
-					<ul>
-					<li>Microsoft Office</li>
-					</ul>
-				</div>
-			<h3 class="resume-title">Επιπρόσθετη ακαδημαϊκή & εργασιακή εμπειρία</h3>
-		 <div class="resume-item">
+              <h4>ΓΛΩΣΣΕΣ</h4>
+              <li>Γαλλικά</li>
+              <p><em>DALF C2 </em></p>
+              <li>Αγγλικά</li>
+              <p><em>Michigan Examination for the Certicate of Proficiency in
+                  English (ECPE)</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>ΧΡΗΣΗ Η/Υ</h4>
+              <li>Microsoft Office</li>
+            </div>
+            <h3 class="resume-title">Συγγραφή ακαδημαϊκών εργασιών</h3>
+            <div class="resume-item">
+              <h4>Νομικη Σχολη Αθηνων</h4>
+              <h5>Χειμερινό εξάμηνο 2018
+                Επιβλέπων καθηγητής: Χριστοδούλου Κωνσταντίνος</h5>
+              <p><em>"Τα πνευμαιτκά δικαιώματα των φωτογράφων και η έννομη προστασία τους"</em></p>
+            </div>
+            <div class="resume-item">
+              <h5>Χειμερινό εξάμηνο 2018
+                Επιβλέπουσα καθηγήτρια: Κουφού Αθηνά</h5>
+              <p><em>"Αρχαιοκαπηλία. Παράνομη διακίνηση και εμπορία πολιτιστικών αγαθών"</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>ΑΣΚΤ</h4>
+              <h5>2018-2023</h5>
+              <p><em>Πλήθος εργασιών στα αντικείμενα της φιλοσοφίας και αισθητικής της τέχνης, ιστορίας της τέχνης,
+                  αρχιτεκτονικής, φωτογραφίας, παιδαγωγικής. </em></p>
+            </div>
+            <h3 class="resume-title">Επιπρόσθετη ακαδημαϊκή & εργασιακή εμπειρία</h3>
+            <div class="resume-item">
               <h4>ΑΝΩΤΑΤΗ ΣΧΟΛΗ ΚΑΛΩΝ ΤΕΧΝΩΝ</h4>
               <h5>2018 - 2023</h5>
               <p><em>Θεωρία και Ιστορία της Τέχνης</em></p>
             </div>
-		  <div class="resume-item">
-		<h4>ΠΡΑΚΤΙΚΗ ΑΣΚΗΣΗ ΣΕ ΕΤΑΙΡΕΙΑ ΟΠΤΙΚΟΑΚΟΥΣΤΙΚΩΝ ΠΑΡΑΓΩΓΩΝ</h4>
+            <div class="resume-item">
+              <h4>ΠΡΑΚΤΙΚΗ ΑΣΚΗΣΗ ΣΕ ΕΤΑΙΡΕΙΑ ΟΠΤΙΚΟΑΚΟΥΣΤΙΚΩΝ ΠΑΡΑΓΩΓΩΝ</h4>
               <h5>Νοέμβριος 2021 - Δεκέμβριος 2021</h5>
-              <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών Laika Productions.
-		      Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους. 
-		      Βοήθεια στην προετοιμασία του υλικού και στην έρευνα ιστορικών αρχείων για την παραγωγή ντοκιμαντέρ.</em></p>
-            </div>  
-		  <div class="resume-item">
-		<h4>ΘΕΑΤΡΟ "ΑΓΓΕΛΩΝ ΒΗΜΑ"</h4>
+              <p><em>Βοηθός οργάνωσης παραγωγής στην εταιρεία κινηματογραφικών, τηλεοπτικών και μουσικών παραγωγών Laika
+                  Productions.
+                  Συμμετοχή ως βοηθός παραγωγής σε γύρισμα ταινίας μικρού μήκους.
+                  Βοήθεια στην προετοιμασία του υλικού και στην έρευνα ιστορικών αρχείων για την παραγωγή
+                  ντοκιμαντέρ.</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>ΘΕΑΤΡΟ "ΑΓΓΕΛΩΝ ΒΗΜΑ"</h4>
               <h5>Νοέμβριος 2018 - Μάρτιος 2019</h5>
               <p><em>Συνεργασία στη λειτουργία του φουαγιέ του θεάτρου.</em></p>
-            </div>  
-	      <h3 class="resume-title">Συγγραφή ακαδημαϊκών εργασιών</h3>
-		 <div class="resume-item">
-              <h4>Νομικη Σχολη Αθηνων</h4>
-              <h5>Χειμερινό εξάμηνο 2018
-		  Επιβλέπων καθηγητής: Χριστοδούλου Κωνσταντίνος</h5>
-              <p><em>"Τα πνευμαιτκά δικαιώματα των φωτογράφων και η έννομη προστασία τους"</em></p>
             </div>
-		  <div class="resume-item">
-	      <h5>Χειμερινό εξάμηνο 2018 
-		  Επιβλέπουσα καθηγήτρια: Κουφού Αθηνά</h5>
-              <p><em>"Αρχαιοκαπηλία. Παράνομη διακίνηση και εμπορία πολιτιστικών αγαθών"</em></p>
-            </div>
-		  <div class="resume-item">
-	    <h4>ΑΣΚΤ</h4>
-              <h5>2018-2023</h5>
-              <p><em>Πλήθος εργασιών στα αντικείμενα της φιλοσοφίας και αισθητικής της τέχνης, ιστορίας της τέχνης, αρχιτεκτονικής, φωτογραφίας, παιδαγωγικής. </em></p>
-            </div>
-		
-            </div>
-			   <div class="col-lg-6" data-aos="fade-up" data-aos-delay="40">
-		       
-              <h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
-		 <div class="resume-item">
+
+
+          </div>
+          <div class="col" data-aos="fade-up" data-aos-delay="40">
+            <h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
+            <div class="resume-item">
               <h4>Παρακολουθηση επιστημονικης εκδηλωσης του Οργανισμου Πνευματικης Ιδιοκτησιας</h4>
               <h5>Οκτώβριος 2022</h5>
               <p><em>Πνευματική Ιδιοκτησία και Δικαιοσύνη</em></p>
             </div>
             <div class="resume-item">
               <h4>Κυκλος ελευθερων μαθηματων δικαστικης γραφολογιας </h4>
-              <h5>Μάρτιος- Απρίλιος 2018	</h5>
+              <h5>Μάρτιος- Απρίλιος 2018 </h5>
               <p><em>Νομική σχολή Αθηνών</em></p>
             </div>
             <div class="resume-item">
               <h4>Φεστιβαλ «Μικρο Παρισι των Αθηνων», Petit Paris d’ Athènes
-					Athens Art Network - Αθηναϊκο Καλλιτεχνικο Δικτυο</h4>
+                Athens Art Network - Αθηναϊκο Καλλιτεχνικο Δικτυο</h4>
               <h5>Οκτώβριος 2017 & 2018</h5>
             </div>
-			<div class="resume-item">
+            <div class="resume-item">
               <h4>Κυκλος σεμιναριων Πολιτιστικης Διαχειρισης </h4>
               <h5>Οκτώβριος 2017</h5>
               <p><em>Φεστιβάλ «Μικρό Παρίσι των Αθηνών 2017»</em></p>
             </div>
-			<div class="resume-item">
+            <div class="resume-item">
               <h4>Athens Photo Festival (APhF : 2017)</h4>
               <h5>Ιούνιος – Ιούλιος 2017</h5>
               <p><em>Μουσείο Μπενάκη, Κτίριο Πειραιώς</em></p>
             </div>
-			<div class="resume-item">
+            <div class="resume-item">
               <h4>Σεμιναριο με τιτλο «Το εγκλημα των αδελφων Παπεν»</h4>
               <h5>Μάιος 2017</h5>
               <p><em>Εργαστήριο Ποινικών και Εγκληματολογικών Ερευνών του τμήματος
-					 Νομικής του Πανεπιστημίου Αθηνών σε συνεργασία με το Κέντρο Ψυχαναλυτικών Ερευνών της Αθήνας</em></p>
+                  Νομικής του Πανεπιστημίου Αθηνών σε συνεργασία με το Κέντρο Ψυχαναλυτικών Ερευνών της Αθήνας</em></p>
             </div>
-			<div class="resume-item">
+            <div class="resume-item">
               <h4>Επισκεψη στο Ευρωπαϊκο Κοινοβουλιο</h4>
               <h5>Στρασβούργο, Απρίλιος 2012</h5>
               <p><em>EUROSCOLA</em></p>
             </div>
           </div>
+          <!-- <div class="col-4" data-aos="fade-up" data-aos-delay="40">
+          </div> -->
         </div>
       </div>
     </section><!-- End Resume Section -->
 
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/counterup/counterup.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/jquery/jquery.min.js"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+    <script src="assets/vendor/counterup/counterup.min.js"></script>
+    <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/venobox/venobox.min.js"></script>
+    <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+    <script src="assets/vendor/typed.js/typed.min.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="assets/js/main.js"></script>
 
-</body>
+  </body>
 
 </html>
