--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <li>Γαλλικά</li>
               <p><em>DALF C2 </em></p>
               <li>Αγγλικά</li>
-              <p><em>Michigan Examination for the Certicate of Proficiency in
+              <p><em>Michigan Examination for the Certificate of Proficiency in
                   English (ECPE)</em></p>
             </div>
             <div class="resume-item">
