--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <h4>Νομικη Σχολη Αθηνων</h4>
               <h5>Χειμερινό εξάμηνο 2018
                 Επιβλέπων καθηγητής: Χριστοδούλου Κωνσταντίνος</h5>
-              <p><em>"Τα πνευμαιτκά δικαιώματα των φωτογράφων και η έννομη προστασία τους"</em></p>
+              <p><em>"Τα πνευματικά δικαιώματα των φωτογράφων και η έννομη προστασία τους"</em></p>
             </div>
             <div class="resume-item">
               <h5>Χειμερινό εξάμηνο 2018
