--- a/index.html
+++ b/index.html
@@ -183,9 +183,8 @@
           <div class="col" data-aos="fade-up" data-aos-delay="40">
             <h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
             <div class="resume-item">
-              <h4>Παρακολουθηση επιστημονικης εκδηλωσης του Οργανισμου Πνευματικης Ιδιοκτησιας</h4>
-              <h5>Οκτώβριος 2022</h5>
-              <p><em>Πνευματική Ιδιοκτησία και Δικαιοσύνη</em></p>
+              <h4>Παρακολουθηση σεμιναριων και επιστημονικων εκδηλωσεων σχετικά με ζητηματα Πνευματικης Ιδιοκτησιας και νεων τεχνολογιων </h4>
+              
             </div>
             <div class="resume-item">
               <h4>Κυκλος ελευθερων μαθηματων δικαστικης γραφολογιας </h4>
