--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="col" data-aos="fade-up" data-aos-delay="40">
             <h3 class="resume-title">Σεμινάρια - Εθελοντισμός</h3>
             <div class="resume-item">
-              <h4>Παρακολουθηση σεμιναριων και επιστημονικων εκδηλωσεων σχετικά με ζητηματα Πνευματικης Ιδιοκτησιας και νεων τεχνολογιων </h4>
+              <h4>Παρακολουθηση σεμιναριων και επιστημονικων εκδηλωσεων σχετικα με ζητηματα Πνευματικης Ιδιοκτησιας και νεων τεχνολογιων </h4>
               
             </div>
             <div class="resume-item">
