--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
   <!-- Favicons -->
-  <link href="assets/img/IMG_20221210_201901-removebg-preview (1).png" rel="icon">
+  <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -69,8 +69,8 @@
               <h4>Νeα δικηγoρος</h4>
               <h5> Δεκέμβριος 2021 - σήμερα</h5>
               <p><em> Ανάληψη και αυτόνομη διαχείριση νομικών εργασιών.
-                  Ενδεικτικά: συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα σε υποθηκοφυλακεία,
-                  διαπραγμάτευση σύναψης σύμβασης εκμετάλλευσης έργου πνευματικής ιδιοκτησίας, μετάφραση-επικύρωση
+                  Ενδεικτικά: συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα τίτλων ιδιοκτησίας και έλεγχος βαρών σε υποθηκοφυλακεία,
+                  διαπραγμάτευση όρων σύμβασης εκμετάλλευσης έργου πνευματικής ιδιοκτησίας, μετάφραση-επικύρωση
                   εγγράφων. </em></p>
             </div>
             <div class="resume-item pb-0">
@@ -79,15 +79,21 @@
               <p><em>Νομική συνεργάτιδα της εταιρείας "MTC –ΜΑΚΕΔΟΝΙΚΗ ΤΕΧΝΙΚΗ ΕΤΑΙΡΕΙΑ".
                   Παροχή ανεξάρτητων υπηρεσιών στα πλαίσια ανάληψης έργου από την εταιρεία "PQH ΕΝΙΑΙΑ ΕΙΔΙΚΗ ΕΚΚΑΘΑΡΙΣΗ
                   Α.Ε."
-                  Eκκαθάριση πιστωτικών ιδρυμάτων. </em></p>
+                  Eκκαθάριση πιστωτικών ιδρυμάτων. Τμήμα εγγυημένων δανείων. </em></p>
+              <li> Υποθέσεις τραπεζικού, αστικού, εμπορικού δικαίου και πολιτικής δικονομίας</li>
+             
             </div>
             <div class="resume-item pb-0">
               <!-- <h4>Νεα δικηγορος</h4> -->
               <h5>Σεπτέμβριος - Οκτώβριος 2021 </h5>
               <p><em>Δικηγορικό Γραφείο Στέλιου Γκαρίπη </em></p>
-              <p><em>Συνεργασία σε υποθέσεις δημοσίου, εταιρικού δικαίου,
+              <p><em>Συνεργασία σε υποθέσεις δημοσίου, εταιρικού, αστικού δικαίου και
                   βιομηχανικής ιδιοκτησίας. Ενασχόληση με τη βασική νομοθεσία για τα ιατροτεχνολογικά προϊόντα. </em>
               </p>
+              <li> Σύνταξη δικοφράφων (αιτήσεις ακύρωσης, αναστολής και προσωρινών διαταγών ενώπιον των διοικητικών δικαστηρίων,
+                ασφαλιστικών μέτρων, προσωρινών διαταγών και αγωγών ενώπιον των πολιτικών δικαστηρίων, εξωδίκων καταγγελιών) </li>
+              <li> Κατάθεση-παραλαβή δικογράφων, επικοινωνία με δικαστικούς επιμελητές </li>
+              <li> Νομική έρευνα - Αναζήτηση νομολογίας </li>
             </div>
             <div class="resume-item pb-0">
               <h4>Αδεια ασκησης δικηγορικου επαγγελματος</h4>
@@ -102,20 +108,26 @@
               <ul>
                 <li>Ενασχόληση με όλο το φάσμα του δικαίου</li>
                 <li>Θέματα διοικητικού δικαίου, δικονομικά ζητήματα (πολεοδομικά, δημόσιες συμβάσεις, τεχνικά έργα)</li>
-                <li>Θέματα εμπορικού και εταιρικού δικαίου (λύση εμπορικών εταιριών) </li>
+                <li>Θέματα εμπορικού και εταιρικού δικαίου (λύση εμπορικών εταιρειών) </li>
                 <li>Θέματα εργατικού δικαίου και ευρύτερα θέματα αστικού δικαίου</li>
-                <li>Αναζήτηση κατάλληλης νομολογίας </li>
                 <li>Σύνταξη νομικών κειμένων</li>
+                <li>Αναζήτηση νομολογίας </li>
+                
               </ul>
               <h5>Απρίλιος 2019 - Δεκέμβριος 2019</h5>
               <p><em>Δικηγορικό Γραφείο Αθανασίου Τετώρου και συνεργατών </em></p>
               <ul>
                 <li>Ενασχόληση με όλο το φάσμα του δικαίου </li>
-                <li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου</li>
-                <li>Εξωτερικές εργασίες (κατάθεση-παραλαβή δικογράφων, παρακολούθηση πορείας των υποθέσεων,
-                  παρακολούθηση διαδικασίας στα ακροατήρια)</li>
-                <li>Νομική έρευνα - εύρεση νομολογίας </li>
+                <li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου. 
+                  Ενδεικτικά (διαφορές κτηματολογίου, διαζυγίου-επιμέλειας-διατροφής, εκπροσώπησης εταιρειών, ρύθμισης οφειλών, εργατικού δικαίου,
+                  μισθωτικές διαφορές, ανακοπές κατά διαταγών πληρωμής - εκτελέσεων, εκτέλεση ποινών, κατοχύρωση εμπορικού σήματος) </li>
+                <li>Εξωτερικές εργασίες (κατάθεση-παραλαβή δικογράφων, επικοινωνία με δικαστικούς επιμελητές, παρακολούθηση πορείας των υποθέσεων)</li>
+                 <li> Παρακολούθηση διαδικασίας, αιτήσεις αναβολών και αναγγελίες ενώπιον των ακροατηρίων </li>
                 <li>Συνδρομή στη σύνταξη δικογράφων </li>
+                <li>Σύνταξη δικογράφων και νομικών εγγράφων (αγωγή διαζυγίου, εξωδίκων καταγγελιών) </li>
+                <li>Νομική έρευνα - αναζήτηση νομολογίας </li>
+                <li>Έρευνα σε υποθηκοφυλακεία</li>
+                <li> Μεταφράσεις εγγράφων </li>
               </ul>
             </div>
           </div>
