--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <h4>Νeα δικηγoρος</h4>
               <h5> Δεκέμβριος 2021 - σήμερα</h5>
               <p><em> Ανάληψη και αυτόνομη διαχείριση νομικών εργασιών.
-                  Ενδεικτικά: συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα τίτλων ιδιοκτησίας και έλεγχος βαρών σε υποθηκοφυλακεία,
+                  Ενδεικτικά· συμβουλευτική σε αγοραπωλησία ακινήτων,έρευνα τίτλων ιδιοκτησίας και έλεγχος βαρών σε υποθηκοφυλακεία,
                   διαπραγμάτευση όρων σύμβασης εκμετάλλευσης έργου πνευματικής ιδιοκτησίας, μετάφραση-επικύρωση
                   εγγράφων. </em></p>
             </div>
@@ -116,8 +116,8 @@
               <ul>
                 <li>Ενασχόληση με όλο το φάσμα του δικαίου </li>
                 <li>Υποθέσεις αστικού, εμπορικού, ποινικού και διοικητικού δικαίου. 
-                  Ενδεικτικά (διαφορές κτηματολογίου, διαζυγίου-επιμέλειας-διατροφής, εκπροσώπησης εταιρειών, ρύθμισης οφειλών, εργατικού δικαίου,
-                  μισθωτικές διαφορές, ανακοπές κατά διαταγών πληρωμής - εκτελέσεων, εκτέλεση ποινών, κατοχύρωση εμπορικού σήματος) </li>
+                  Ενδεικτικά· διαφορές κτηματολογίου, διαζυγίου-επιμέλειας-διατροφής, εκπροσώπησης εταιρειών, ρύθμισης οφειλών, εργατικού δικαίου,
+                  μισθωτικές διαφορές, ανακοπές κατά διαταγών πληρωμής - εκτελέσεων, εκτέλεση ποινών, κατοχύρωση εμπορικού σήματος </li>
                 <li>Εξωτερικές εργασίες (κατάθεση-παραλαβή δικογράφων, επικοινωνία με δικαστικούς επιμελητές, παρακολούθηση πορείας των υποθέσεων)</li>
                  <li> Παρακολούθηση διαδικασίας, αιτήσεις αναβολών και αναγγελίες ενώπιον των ακροατηρίων </li>
                 <li>Συνδρομή στη σύνταξη δικογράφων </li>
